--- a/TestApplicaton/TestApplicaton.csproj
+++ b/TestApplicaton/TestApplicaton.csproj
@@ -6,8 +6,35 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Data\Migrations\20210624150858_PageMigration.cs" />
+    <Compile Remove="Data\Migrations\20210624150858_PageMigration.Designer.cs" />
+    <Compile Remove="Data\Migrations\20210624200648_UserMigration.cs" />
+    <Compile Remove="Data\Migrations\20210624200648_UserMigration.Designer.cs" />
+    <Compile Remove="Data\Migrations\20210624201016_AppUserMigration.cs" />
+    <Compile Remove="Data\Migrations\20210624201016_AppUserMigration.Designer.cs" />
+    <Compile Remove="Data\Migrations\20210624201421_ApplicationUserMigration.cs" />
+    <Compile Remove="Data\Migrations\20210624201421_ApplicationUserMigration.Designer.cs" />
+    <Compile Remove="Data\Migrations\20210624211650_NewMigration.cs" />
+    <Compile Remove="Data\Migrations\20210624211650_NewMigration.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="Views\Contact\Index.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Views\AboutMe\Index.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\Identity\Services\" />
   </ItemGroup>
 
 </Project>
