--- a/TestApplicaton/appsettings.json
+++ b/TestApplicaton/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-TestApplicaton-FF21796B-A70D-46E3-9373-486F77EDA6A9;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=DESKTOP-KHAUF8R;Initial Catalog=Chatter;Integrated Security=true;"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
