--- a/TestApplicaton/appsettings.json
+++ b/TestApplicaton/appsettings.json
@@ -1,7 +1,7 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "Data Source=DESKTOP-KHAUF8R;Initial Catalog=Chatter;Integrated Security=true;"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-4V5PUFI;Initial Catalog=Chatter;Integrated Security=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
